# k-diffusion

./: .gitignore  CITATION.cff  README.md  butterflies-k-diffusion-baseline_new_state.json  config_from_inference.py  convert_for_inference.py  eval.py  pyproject.toml  requirements.oai.txt  requirements.txt  sample.py  sample_clip_guided.py  setup.cfg  setup.py  train.py  train_cifar.py  train_mnist.py
.github/workflows/: python-publish.yml
configs/: config_32x32_small.json  config_32x32_small_butterflies.json  config_32x64_small_butterflies.json  config_cifar10.json  config_cifar10_transformer.json  config_guided_diffusion_imagenet.json  config_mnist.json  config_mnist_transformer.json  config_oxford_flowers.json  config_oxford_flowers_shifted_window.json
k_diffusion/: __init__.py  augmentation.py  config.py  evaluation.py  external.py  gns.py  layers.py  models.py  sampling.py  utils.py
k_diffusion/models/: __init__.py  axial_rope.py  flags.py  flops.py  image_transformer_v1.py  image_transformer_v2.py  image_v1.py
kdiff_trainer/: load_diffusion_model.py
model_configs/: model_config_32x32_small.json
