[metadata]
name = k-diffusion
version = 0.2.0.dev0
author = Katherine Crowson
author_email = crowsonkb@gmail.com
url = https://github.com/crowsonkb/k-diffusion
description = Karras et al. (2022) diffusion models for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    accelerate
    clip-anytorch
    dctorch
    einops
    jsonmerge
    kornia
    Pillow
    safetensors
    scipy
    torch >= 2.1
    torchdiffeq
    torchsde
    torchvision
    tqdm

[options.extras_require]
train =
    clean-fid
    scikit-image
    wandb
